--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,20 @@
 
 body {
     font-family: Gobold Bold;
-    background: white;
-    overflow: hidden;
+    margin: 0;
+    border: 1px solid black;
 }
 
 #start {
     position: relative;
-    overflow: hidden;
-    height: 3600px;
+    overflow: visible;
+    height: 100vh!important;
+    width: 100vw!important;
+}
+
+#start img {
+    transform-origin: center center;
+    display: block;
 }
 
 #comedia-miseria {
@@ -24,35 +30,54 @@ body {
 }
 
 #comedia-miseria h1 {
-    color: black;
     margin: 0px;
     position: absolute;
     width: 96vw;
-    padding-top: 10vh;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%);
     text-align: center;
     overflow: hidden;
 }
 
 #comedia-miseria > h1 > span {
-    font-size: clamp(0.5vw, 8vw, 150px);
+    font-size: clamp(1vw, 10vw, 150px);
     display: inline-block;
     margin-right: .3rem;
     margin-left: .3rem;
-    animation: FadeIn 1s linear;
+    animation: FadeInTitle 1s linear;
     animation-fill-mode: both;
-
 }
 
-@keyframes FadeIn { 
-  0% {
-    top: 90px;
-  }
+@keyframes FadeInTitle { 
+    0% {
+	transform: translateY(500px);
+    }
 
-  100% {
-    top: 0px;
-  }
+    70% {
+	transform: translateY(-50px);
+    }
+
+    100% {
+	transformY: translateY(50%);
+    }
+}
+
+@keyframes FadeInCircle { 
+    0% {
+	transform: translate3d(-150%, -20%, 0);
+    }
+
+    50% {
+	transform: translate3d(-50%, 30%, 0);
+    }
+
+    90% {
+	transform: translate3d(100%, -50%, 0);
+    }
+
+    100% {
+	transform: translate3d(-50%, -50%, 0);
+    }
 }
 
 #comedia-miseria > h1 > span:nth-child(1) { animation-delay: .2s }
@@ -71,70 +96,122 @@ body {
 #comedia-miseria > h1 > span:nth-child(15) { animation-delay: .5s }
 
 
+#silut, #tipo {
+    z-index: 2;
+}
+
+#tipo {
+    opacity: 0;
+    width: 35%;
+    left: 50%;
+    top: 50%;
+    transform: translate3d(-50%, -50%, 0)
+}
+
+#silut {
+    width: 42%;
+    left: 50%;
+    top: 80%;
+    transform: translate3d(-50%, -50%, 0)
+}
+
+#signi {
+    z-index: 3;
+    left: 50%;
+    top: 25%;
+    width: 5%;
+    transform: translate3d(-50%, -50%, 0)
+}
+
+#mic {
+    width: 30px;
+    z-index: 5;
+    transform: translate3d(-50%, -50%, 0);
+    top: 0;
+    left: 0;
+}
+
+#circulo {
+    z-index: 1;
+    animation: FadeInCircle 5s linear;
+    animation-delay: 1s;
+    animation-fill-mode:forwards;
+    width: 40%;
+    transform: translate3d(-150%, -20%, 0);
+    left: 50%;
+    top: 50%;
+
+}
+
+#silut, #circulo, #tipo, #signi, #mic {
+    position: absolute;
+    transform-origin: center center;
+}
+
 /* Locomotive Scroll */
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
-  overflow: hidden; }
+    overflow: hidden; }
 
 html.has-scroll-dragging {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; }
 
 .has-scroll-smooth body {
-  overflow: hidden; }
+    overflow: hidden; }
 
 .has-scroll-smooth [data-scroll-container] {
-  min-height: 100vh; }
+    min-height: 100vh; }
 
 [data-scroll-direction="horizontal"] [data-scroll-container] {
-  height: 100vh;
-  display: inline-block;
-  white-space: nowrap; }
+    height: 100vh;
+    display: inline-block;
+    white-space: nowrap; }
 
 [data-scroll-direction="horizontal"] [data-scroll-section] {
-  display: inline-block;
-  vertical-align: top;
-  white-space: nowrap;
-  height: 100%; }
+    display: inline-block;
+    vertical-align: top;
+    white-space: nowrap;
+    height: 100%; }
 
 .c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100%;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0; }
-  .c-scrollbar:hover {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 11px;
+    height: 100%;
+    transform-origin: center right;
+    transition: transform 0.3s, opacity 0.3s;
+    opacity: 0; }
+.c-scrollbar:hover {
     transform: scaleX(1.45); }
-  .c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
+.c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
     opacity: 1; }
-  [data-scroll-direction="horizontal"] .c-scrollbar {
+[data-scroll-direction="horizontal"] .c-scrollbar {
     width: 100%;
     height: 10px;
     top: auto;
     bottom: 0;
     transform: scaleY(1); }
-    [data-scroll-direction="horizontal"] .c-scrollbar:hover {
-      transform: scaleY(1.3); }
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+    transform: scaleY(1.3); }
 
 .c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: -webkit-grab;
-  cursor: grab; }
-  .has-scroll-dragging .c-scrollbar_thumb {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0.5;
+    width: 7px;
+    border-radius: 10px;
+    margin: 2px;
+    cursor: -webkit-grab;
+    cursor: grab; }
+.has-scroll-dragging .c-scrollbar_thumb {
     cursor: -webkit-grabbing;
     cursor: grabbing; }
-  [data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
     right: auto;
     bottom: 0; }
